fixed footer alignment issues. Fixed styling on catalog listing page

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -5803,9 +5803,6 @@ h2 {
             width: 12%;
             margin: 0 1rem;
             top: 50%; }
-            @media only screen and (max-width: 767px) {
-              .products li .woocommerce-loop-product__title span:nth-child(2) em:before, .products li .woocommerce-loop-product__title span:nth-child(2) em:after {
-                top: 100%; } }
           .products li .woocommerce-loop-product__title span:nth-child(2) em:before {
             left: -24%; }
             @media only screen and (max-width: 767px) {
