--- a/sass/partials/shop.scss
+++ b/sass/partials/shop.scss
@@ -68,9 +68,6 @@
 					    width: 12%;
 					    margin: 0 1rem;
 					    top: 50%;
-					    @media only screen and (max-width: 767px) {
-							top:  100%;
-						}
 					}
 					&:before{
 						left: -24%;
